[project]
name = "rtetempo"
version = "1.3.2"
description = "RTE Tempo Calendar integration for Home Assistant"
license = "MIT"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "S",
    "UP",
    "W",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D202",
    "D203",
    "D213",
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.rtetempo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["custom_components/rtetempo"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
